2014-10-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* info.c (get_initial_file) <file name lookup>,
	(main) <--file>, <'(file)node' as first argument>: Add a node to 
	ref_list from the file we found.
	(add_initial_nodes): Don't fall back to a "Top" node as it 
	should already be in ref_list.  If any "--node" argument given, 
	discard the first element of ref_list.

2014-10-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.c (main) <--all not used>: Check if the first 
	non-option argument is of the form "(file)node", and if so add 
	it to the list of nodes to start with.
	(add_initial_nodes) <user_nodenames>: Duplicate filename string.  
	Allow nodename to be empty.
	<following menus>: Use a node from our list of initial nodes to 
	start at if initial_file is null.

	* info/t/spec-file-node.sh, info/t/spec-no-node.sh, 
	info/t/spec-menu.sh: New tests.

	* info/info.c (get_initial_file): Don't take a user-specified 
	filename as an argument.
	<--file>: Moved to main.

2014-10-09  Karl Berry  <karl@gnu.org>

	* doc/texinfo.texi (Node Line Requirements, Writing a Menu):
	menu entries need exact spacing for the sake of Emacs Info.

2014-10-09  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (info_index_search): Call 
	info_indices_of_file_buffer before prompting user.  Display an 
	error message if no index is found.
	(info_virtual_index): Match error message to that used 
	elsewhere.
	* info/t/no-index.sh, info/t/index-completing.sh: New tests.

	* info/echo-area.c (info_read_and_dispatch_in_echo_area): 
	Recalculate line map after each user command.
	(input_line, input_line_prompt): Comments added.
	[FD_SET && hpux, FD_SET && !hpux] (fd_set_cast): Remove unused 
	macro.
	* info/window.c (window_point_to_column): Return left-most 
	column for multi-column characters.

2014-10-08  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (info_index_search): Don't duplicate a string 
	just to free the original.